--- a/src/css/_modules.css
+++ b/src/css/_modules.css
@@ -1,1 +1,23 @@
+/* Testimonial Module */ 
+
+.testimonial {
+    background-color: #fff; 
+    padding: 45px 40px 20px; 
+    text-align: center; 
+    margin-top: 20px; 
+}
+
+.testimonial .avatar, 
+.testimonial .name {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 20px 0;
+}
+
+.testimonial .avatar {
+    height: 45px;
+    width: 45px;
+    background-size: cover;
+    border-radius: 50%;
+}
 
