--- a/src/modules/Statistic.module/module.css
+++ b/src/modules/Statistic.module/module.css
@@ -12,18 +12,18 @@
   background-color: #d0d0d0;
   border-radius: 50%;
   float: none;
-  font-size: 120px;
+  font-size: 150px;
   height: 1em;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   position: relative;
   width: 1em;
 }
-.statistic-circle > span {
+.statistic-circle > .statistic-info {
   color: #000;
   display: block;
-  font-size: 0.2em;
+  font-size: 0.3em;
   left: 0;
-  line-height: 5em;
+  line-height: 3.3em;
   position: absolute;
   text-align: center;
   top: 0;
@@ -31,6 +31,9 @@
   white-space: nowrap;
   width: 100%;
   z-index: 1;
+}
+.statistic-circle > .statistic-info .unit {
+  font-size: 0.6em; 
 }
 .statistic-circle .slice {
   clip: rect(0em, 1em, 1em, 0.5em);
@@ -44,7 +47,7 @@
 .statistic-circle .bar,
 .statistic-circle .large .fill {
   border-radius: 50%;
-  border: 0.08em solid #34b5e5;
+  border: 0.08em solid #000;
   border-radius: 50%;
   clip: rect(0em, 0.5em, 1em, 0em);
   height: 0.84em;
@@ -53,7 +56,7 @@
 }
 .statistic-circle .bar, 
 .statistic-circle .fill {
-  border-color: #34b5e5;
+  border-color: #000;
 }
 .statistic-circle .fill {
   -webkit-transform: rotate(180deg);
@@ -67,9 +70,9 @@
   border-radius: 50%;
   content: " ";
   display: block;
-  height: 0.92em;
-  left: 0.04em;
+  height: 0.96em;
+  left: 0.02em;
   position: absolute;
-  top: 0.04em;
-  width: 0.92em;
+  top: 0.02em;
+  width: 0.96em;
 }
