--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -129,6 +129,10 @@ ul li:before {
   vertical-align: middle;
 }
 
+ul.alternative-list li:before {
+  color: #fff; 
+}
+
 ul li,
 ol li {
   font-size: 1rem; 
