--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -19,7 +19,7 @@
       background_image={
         'backgroundPosition': 'MIDDLE_CENTER',
         'backgroundSize': 'cover',
-        'imageUrl': 'https://cdn2.hubspotqa.net/hubfs/101400067/Sass%20Theme/Banner.png'
+        'imageUrl': get_asset_url("../images/home-banner.png")
       },
       vertical_alignment='MIDDLE'
     %}
@@ -92,42 +92,63 @@
       {% end_dnd_section %}
 
     {# Two Column With Image Left Section #}
-    {% dnd_section
-      background_color={
-        r: 52,
-        g: 181,
-        b: 229,
-        a: 1.0
-      }
-    %}
-      {% dnd_module path='@hubspot/image',
-        offset=0,
-        width=6,
-        flexbox_positioning='MIDDLE_CENTER'  
+      {% dnd_section
+        background_color={
+          r: 52,
+          g: 181,
+          b: 229,
+          a: 1.0
+        }
       %}
-        {% module_attribute "label" %}Image{% end_module_attribute %}
-        {% module_attribute "src"%}https://cdn2.hubspotqa.net/hubfs/101400067/Sass%20Theme/Banner.png{% end_module_attribute %}
-      {% end_dnd_module %}
-      {% dnd_module path='@hubspot/rich_text',
-        offset=6,
-        width=6,
-        flexbox_positioning='MIDDLE_CENTER'  
-      %}
-        {% module_attribute "label" %}Rich Text{% end_module_attribute %}
-        {% module_attribute "html"%}
-          <div style="text-align: center">
-            <h2>Full Control</h2>
-            <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
-            <ul>
-              <li>Someting awesome here</li>
-              <li>Someting awesome here</li>
-              <li>Someting awesome here</li>
-            </ul>
-          </div>
-        {% end_module_attribute %}
-      {% end_dnd_module %}
-    {% end_dnd_section %}
-
+        {% dnd_column
+          offset=0,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path='@hubspot/linked_image' %}
+            {% module_attribute "label" %}Image{% end_module_attribute %}
+            {% module_attribute "img" is_json=True %}
+              {
+                "src": get_asset_url("../images/computer.png"),
+                "alt": "Computer and phone",
+                "size_type": "auto"
+              }
+            {% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+        {% dnd_column 
+          offset=6,
+          width=6
+        %}
+          {% dnd_row %}
+            {% dnd_module path='@hubspot/rich_text'%}
+              {% module_attribute "label" %}Rich Text{% end_module_attribute %}
+              {% module_attribute "html" %}
+                <div>
+                  <h2 style="color: #fff;">Full Control</h2>
+                  <p style="color: #fff;">Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
+                  <ul class="alternative-list" style="color: #fff;">
+                    <li>Someting awesome here</li>
+                    <li>Someting awesome here</li>
+                    <li>Someting awesome here</li>
+                  </ul>
+                </div>
+              {% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+          {% dnd_row %}
+            {% dnd_module 
+              path='../modules/Customizable button',
+              flexbox_positioning='MIDDLE_LEFT' 
+            %}
+              {% module_attribute "label" %}Button{% end_module_attribute %}
+              {% module_attribute "link" %}#{% end_module_attribute %}
+              {% module_attribute "button_text" %}View Features{% end_module_attribute %}
+            {% end_dnd_module %}
+          {% end_dnd_row %}
+        {% end_dnd_column %}
+      {% end_dnd_section %}
 
     {# Statistics Section #}
       {% dnd_section %}
@@ -195,7 +216,7 @@
       background_image={
         'backgroundPosition': 'MIDDLE_CENTER',
         'backgroundSize': 'cover',
-        'imageUrl': 'https://cdn2.hubspotqa.net/hubfs/101400067/Sass%20Theme/TestimonialsBanner.png'
+        'imageUrl': get_asset_url("../images/testimonials-banner.png")
       } 
     %}
       {% dnd_column %}
