--- a/src/css/_header.css
+++ b/src/css/_header.css
@@ -67,6 +67,7 @@
     height: 40px;
     width: 40px;
     cursor: pointer;
+    filter: grayscale(1) brightness(4);
   }
 
   #nav-toggle:checked + .header-navigation-toggle {
@@ -75,6 +76,7 @@
     background-position: center;
     height: 22px;
     width: 20px;
+    filter: grayscale(1) brightness(4);
   }
 
   .header .cta {
