--- a/src/css/_modules.css
+++ b/src/css/_modules.css
@@ -1,3 +1,24 @@
+/* Feature Module */ 
+div.feature {
+    padding: 0px 20px; 
+}
+
+div.feature .icon > span {
+    border-color: #d0d0d0; 
+}
+
+div.feature .icon svg {
+    fill: {{ get_theme_style_setting('colors.primary_color.color') }};
+}
+
+/* Statistic Module */ 
+
+.statistic .statistic-circle .bar,
+.statistic .statistic-circle .large .fill,
+.statistic .statistic-circle .fill {
+    border-color: {{ get_theme_style_setting('colors.primary_color.color') }}; 
+}
+
 /* Testimonial Module */ 
 
 .testimonial {
@@ -19,12 +40,4 @@
     width: 45px;
     background-size: cover;
     border-radius: 50%;
-}
-
-/* Statistic Module */ 
-
-.statistic .statistic-circle .bar,
-.statistic .statistic-circle .large .fill,
-.statistic .statistic-circle .fill {
-    border-color: {{ get_theme_style_setting('colors.primary_color.color') }}; 
 }
