--- a/src/templates/homepage.html
+++ b/src/templates/homepage.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <main class="body-container-wrapper">
-  {% dnd_area "dnd_area" class='body-container body-container__homepage', label='Main section' %}
+  {% dnd_area "dnd_area" class='body-container body-container-homepage', label='Main section' %}
 
     {# Banner Section #}
     {% dnd_section max_width=760,
