Finished up landing page

--- a/src/templates/landingpage.html
+++ b/src/templates/landingpage.html
@@ -4,6 +4,9 @@
 -->
 {% extends "./layouts/base.html" %}
 
+{% block header %}
+{% endblock header %}
+
 {% block body %}
 <main class="body-container-wrapper">
   {% dnd_area "dnd_area" class='body-container body-container-landing-page', label='Main section' %}
@@ -17,22 +20,30 @@
         'right': 0
       },
       background_image={
-        'backgroundPosition': 'MIDDLE_CENTER',
+        'backgroundPosition': 'TOP_CENTER',
         'backgroundSize': 'cover',
         'imageUrl': get_asset_url("../images/landing-page-banner.png")
       }
     %}
       {% dnd_column %}
-        {% dnd_row %}
+        {% dnd_row
+          padding={
+            'top': 0,
+            'bottom': 80,
+            'left': 0,
+            'right': 0
+          }
+        %}
           {% dnd_module path='@hubspot/logo', flexbox_positioning='MIDDLE_CENTER'  %}
             {% module_attribute "label" %}Logo{% end_module_attribute %}
           {% end_dnd_module %}
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module 
-            path='@hubspot/linked_image',
+            path='@hubspot/image',
             offset=0,
-            width=4
+            width=4,
+            flexbox_positioning="TOP_CENTER"
           %}
             {% module_attribute "label" %}Image{% end_module_attribute %}
             {% module_attribute "img" is_json=True %}
@@ -46,12 +57,14 @@
           {% dnd_module 
             path='@hubspot/rich_text',
             offset=4,
-            width=4
+            width=4,
+            flexbox_positioning="MIDDLE_LEFT"
           %}
             {% module_attribute "label" %}Rich text{% end_module_attribute %}
             {% module_attribute "html" %}
               <div>
-                <h2>Title of Downloadable Content.</h2>
+                <h4>Subheader About Ebook</h4>
+                <h2>Title of Ebook Content</h2>
                 <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
               </div>
             {% end_module_attribute %}
@@ -59,7 +72,8 @@
           {% dnd_module 
             path='@hubspot/form',
             offset=8,
-            width=4
+            width=4,
+            flexbox_positioning="TOP_CENTER"
           %}
             {% module_attribute "label" %}Form{% end_module_attribute %}
             {% module_attribute "title" %}Yes! Send Me the Ebook!{% end_module_attribute %}
@@ -124,7 +138,7 @@
                 <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
                 <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
               </ul>
-            {% end_module_attribute %}
+            {% end_module_attribute %} 
           {% end_dnd_module %}
         {% end_dnd_row %}
       {% end_dnd_column %}
