Finish about page

--- a/src/templates/landingpage.html
+++ b/src/templates/landingpage.html
@@ -40,7 +40,7 @@
         {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_module 
-            path='@hubspot/image',
+            path='@hubspot/linked_image',
             offset=0,
             width=4,
             flexbox_positioning="TOP_CENTER"
@@ -108,10 +108,12 @@
           %}
             {% module_attribute "label" %}Rich text{% end_module_attribute %}
             {% module_attribute "html" %}
-              <ul class="alternative-list" style="color: #fff;">
-                <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
-                <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
-              </ul>
+              <div>
+                <ul class="alternative-list" style="color: #fff;">
+                  <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
+                  <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
+                </ul>
+              </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
           {% dnd_module 
@@ -121,10 +123,12 @@
           %}
             {% module_attribute "label" %}Rich text{% end_module_attribute %}
             {% module_attribute "html" %}
-              <ul class="alternative-list" style="color: #fff;">
-                <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
-                <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
-              </ul>
+              <div>
+                <ul class="alternative-list" style="color: #fff;">
+                  <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
+                  <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
+                </ul>
+              </div>
             {% end_module_attribute %}
           {% end_dnd_module %}
           {% dnd_module 
@@ -134,10 +138,12 @@
           %}
             {% module_attribute "label" %}Rich text{% end_module_attribute %}
             {% module_attribute "html" %}
-              <ul class="alternative-list" style="color: #fff;">
-                <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
-                <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
-              </ul>
+              <div>
+                <ul class="alternative-list" style="color: #fff;">
+                  <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
+                  <li>A free copy of our extensive marketing ebook guide. This ebook will help you learn everything you need to know about optimizing your blog SEO.</li>
+                </ul>
+              </div>
             {% end_module_attribute %} 
           {% end_dnd_module %}
         {% end_dnd_row %}
