Finished review of the HTML

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -28,7 +28,7 @@
             %}
                 {% dnd_module 
                     path='@hubspot/linked_image',
-                    flexbox_positioning="MIDDLE_LEFT"
+                    flexbox_positioning="TOP_CENTER"
                 %}
                     {% module_attribute "label" %}Image{% end_module_attribute %}
                     {% module_attribute "img" is_json=True %}
