--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -12,11 +12,11 @@
             <input type="checkbox" id="nav-toggle">
             <label class="header-navigation-toggle" for="nav-toggle"></label>
             <div class="header-navigation">
-              {% module "header_navigation_primary" path="../../modules/Menu section", label="Primary Navigation section" %}
+              {% module "header_navigation_primary" path="../../modules/Menu section", label="Primary Navigation" %}
             </div>
         </div>
         <div class="cta column span2">
-            {% module "header_cta" path="@hubspot/cta" label="Select a CTA" %}
+            {% module "header_cta" path="@hubspot/cta" label="Call to Action" %}
         </div>
     </div>
   </div>
