--- a/src/templates/system/404.html
+++ b/src/templates/system/404.html
@@ -8,7 +8,7 @@
 {% block body %}
 <div class="content-wrapper">
   <div class="error-page" data-error="404">
-    <h1 class="error-page_heading">
+    <h1 class="error-page-heading">
       Page not found.
     </h1>
     <a class="hs-button" href="/">Go Home</a>
