--- a/src/templates/system/500.html
+++ b/src/templates/system/500.html
@@ -7,7 +7,7 @@
 {% block body %}
 <div class="content-wrapper">
   <div class="error-page" data-error="500">
-    <h1 class="error-page_heading">
+    <h1 class="error-page-heading">
       Something isn't quite right
     </h1>
     <p>Sorry, an internal server error occurred. But have no fear, we're on the case!</p>
