--- a/src/modules/Social follow.module/module.css
+++ b/src/modules/Social follow.module/module.css
@@ -5,6 +5,7 @@
 }
 .social-links-icon {
   border-right: 2px solid #000; 
+  box-sizing: border-box; 
   float: left; 
   height: 40px;
   padding: 10px; 
