--- a/src/css/_footer.css
+++ b/src/css/_footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #1E2B33;
+  background-color: {{ get_theme_style_setting('colors.tertiary_color.color') }};
 }
 
 .footer-container {
